--- a/scripts/leeyabot.Rmd
+++ b/scripts/leeyabot.Rmd
@@ -1,84 +1,49 @@
 ---
 title: "Leeyabot report!"
 date: "`r Sys.Date()`"
+output: github_document
 ---
 
 
-```{r, include=FALSE}
+```{r knit settings, include=FALSE}
 # This is the leeyabot Rmarkdown, a workflow that looks for differences in a developmental version 
 # typically associated with a GitHub PR. 
 
 # It can be run by the `leeyabot.yml` GitHub Action workflow, note that you will need to manually trigger this 
 # workflow from GitHub for a PR, where only key results/figures will be posted as part of the PR. For a more detailed report knit the markdown on your local machine. 
 
-knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE, out.width='80%', fig.align='center', class='center')
+knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE, 
+                      out.width='80%', fig.align='center', class='center', 
+                      fig.path = "figs/")
 ```
 
 
-```{r}
-# Load packages these will need to be read in the leeybot ymal! 
+```{r setup}
+# Load packages used in this report, note that these will also need to be 
+# read in as dependencies in the leeyabot yml file.
 library(dplyr)
 library(ggplot2)
 library(hector)
 library(here)
 library(knitr)
-```
 
-
-```{r}
 # Set root directory
 BASE_DIR <- here()
 
 # Variables of interest
 vars <- c(CONCENTRATIONS_CO2(), RF_TOTAL(), RF_CO2(), GLOBAL_TAS())
 
-
 # Set global plotting themes 
 theme_set(theme_bw())
 
-# Boolean to control if figures should be printed out or not 
+# Detect platform, we do not want to generate the plots when running on GitHub Actions 
+platform <- Sys.info()["sysname"]
+
 PRINT_FIGS <- FALSE
-
 ```
 
 
-```{r}
-# Read in the comparison data from the oldnew test 
-# Read in comp-data
-file.path(BASE_DIR, "tests", "testthat", "compdata", "hector_comp.csv") %>% 
-    read.csv %>% 
-    filter(variable %in% vars) -> 
-    oldnew_data
-
-# Save oldnew version and commit tag 
-oldnew_vrsn <- unique(oldnew_data$version)
-oldnew_commit <- unique(oldnew_data$commit)
-
-
-# Read in the comparison data associated with the official releases minted on Zenodo
-read.csv("https://zenodo.org/records/13286176/files/leeyabot-data.csv?download=1") %>% 
-    filter(variable %in% vars) -> 
-    zenodo_data
-
-#TODO eventually we will probably need the ability to determine what the most recent 
-# release version is since the zenodo archive might include results from multiple 
-zenodo_data %>% 
-    filter(version ==  "3.2.0") -> 
-    release_data
-
-# Save oldnew version and commit tag 
-release_vrsn <- unique(release_data$version)
-release_commit <- unique(release_data$commit)
-
-```
-
-Hello, this is `Leeyabot`! I look for differences between the this "dev" version of Hector and make some standard diagnostic plots. I specifically compare this version of Hector with 
-
-* **old-new** test data -  `r oldnew_vrsn` (commit `r oldnew_commit`) 
-* **previous release** data - `r release_vrsn` (commit `r release_commit`)
-
-
-```{r}
+```{r helper functions}
 # Define helper functions used in multiple places throughout the Leeyabot script. 
 
 # Run Hector for the standard ssp scenarios
@@ -136,7 +101,7 @@ get_summary_diff <- function(df){
                 Rsqrd <- summary(fit)[["r.squared"]]
                 resid <- summary(fit)[["residuals"]]
             })
-
+            
             RMSE <- sqrt(mean(resid^2))
             
             # The mean of the comparison data to normalize RMSE
@@ -160,22 +125,60 @@ get_summary_diff <- function(df){
 ```
 
 
+
+```{r get comparison data}
+# Read in the comparison data from the oldnew test 
+# Read in comp-data
+file.path(BASE_DIR, "tests", "testthat", "compdata", "hector_comp.csv") %>% 
+    read.csv %>% 
+    filter(variable %in% vars) -> 
+    oldnew_data
+
+# Save oldnew version and commit tag 
+oldnew_vrsn <- unique(oldnew_data$version)
+oldnew_commit <- unique(oldnew_data$commit)
+
+
+# Read in the comparison data associated with the official releases minted on Zenodo
+read.csv("https://zenodo.org/records/13286176/files/leeyabot-data.csv?download=1") %>% 
+    filter(variable %in% vars) -> 
+    zenodo_data
+
+#TODO eventually we will probably need the ability to determine what the most recent 
+# release version is since the zenodo archive might include results from multiple 
+zenodo_data %>% 
+    filter(version ==  "3.2.0") -> 
+    release_data
+
+# Save oldnew version and commit tag 
+release_vrsn <- unique(release_data$version)
+release_commit <- unique(release_data$commit)
+
+```
+
+Hello, this is `Leeyabot`! I look for differences between the this "dev" version of Hector and make some standard diagnostic plots. I specifically compare this version of Hector with 
+
+* **old-new** test data -  `r oldnew_vrsn` (commit `r oldnew_commit`) 
+* **previous release** data - `r release_vrsn` (commit `r release_commit`)
+
+
 # Previous Dev Version Comparison
 
-The **old-new** test data is used in the R testthat unit tests to verify that recent model development has not introduced changes to Hector's output. Here, we generate standard diagnostic plots to identify any changes in model behavior. Depending on the nature of the development, custom comparison plots may also be useful.
+The **old-new** test data is used in the R testthat unit tests to verify that recent model development has not introduced changes to Hector's output. Here, we generate standard diagnostic plots to identify any changes in model behavior. 
 
 ```{r}
-# Run all the scenarios included in the old-new test data set. 
+# Years of data to save. 
 stryr <- min(oldnew_data$year)
 endyr <- max(oldnew_data$year)
 
+
+# Run all the scenarios included in the old-new test data set. 
 inis <- file.path(BASE_DIR, "inst", "input", unique(oldnew_data$scenario)) 
 dev_data <- run_hector(inis = inis, stryr = stryr, endyr = endyr, vars =  vars)
 ```
-    
-    
-    
-    
+
+
+
 ```{r}
 # Compute the difference between Hector results, if there are substantial differences 
 # diagnostic plots will be produced, otherwise the summary table will indicate
@@ -187,20 +190,6 @@ dev_data %>%
     mutate(scenario = gsub(replacement = "", pattern = "hector_|.ini", x = scenario)) %>%  
     mutate(var_units = paste0(variable, " (", units, ")")) -> 
     comp_data
-
-# If there are no differences in outputs, do nothing
-# Otherwise, run summary table and graph code
-tolerance <- 1e-7 
-SAME <- all(abs(comp_data$dif) <= tolerance)  
-
-if (SAME) {
-    msg <- paste0("The current pull request's outputs do not differ from the old-new version of Hector ", 
-                  oldnew_vrsn, ", ", oldnew_commit, sep = "")
-} else {
-    msg <- paste0("The current pull request's outputs differ from ", 
-        oldnew_vrsn, ", ", oldnew_commit, " as follows:", sep = "")  
-}
-cat(msg)
 ```
 
 
@@ -212,63 +201,97 @@ This summary table indicates the $R^2$,  root mean squared error (RMSE), and nor
 summary_table <- get_summary_diff(comp_data)
 
 kable(summary_table, digits = 3, 
-             format.args = list(scientific = TRUE), format = "markdown") 
+      format.args = list(scientific = TRUE), format = "markdown") 
+```
+
+
+```{r}
+# If there are no differences in outputs, do nothing
+# Otherwise, run summary table and graph code
+tolerance <- 1e-7 
+SAME <- all(abs(comp_data$dif) <= tolerance)  
+
+if (SAME) {
+    msg <- paste0("The current pull request's outputs do not differ from the old-new data of Hector ", 
+                  oldnew_vrsn, ", ", oldnew_commit, sep = "")
+} else {
+    msg <- paste0("The current pull request's outputs differ from ", 
+                  oldnew_vrsn, ", ", oldnew_commit, sep = "")  
+}
+cat(msg)
 
 ```
 
 
 
-## Diagnostic Plots
+```{r oldnew, echo=FALSE}
+plotlist <- NULL
+
+# If results look different 
+if(!SAME){
+    # Skip the plotting if running on github actions
+    if(tolower(platform) != "linux"){
+        
+        # Make a plot list
+        plotlist <- list()
+        
+        # Quick plot of the output 
+        ggplot(comp_data) +
+            geom_line(aes(year, value, 
+                          linetype = "old-new data"), color = "grey", linewidth = 1)  + 
+            geom_line(aes(year, dev_value, linetype = "dev", 
+                          color = scenario), linewidth = 1)  +
+            facet_wrap(~var_units, scales = "free") + 
+            scale_linetype_manual(values = c("old-new data" = 1, "dev" = 2)) + 
+            scale_color_viridis_d() + 
+            labs(title = "Dev Hector vs. old-new results", y = NULL, x = NULL, linetype = "Hector Version") -> 
+            plotlist[["fig1"]]
+        
+        # Plot the differences over time
+        ggplot(comp_data, aes(year, dif, color = scenario)) +
+            geom_hline(yintercept = 0, alpha = 0.5) +
+            geom_line() +
+            facet_wrap(~var_units, scales = "free") +
+            scale_color_viridis_d() +
+            ggtitle("Differences between dev Hector and old-new testing data") +
+            labs(x = "Year", y = "Difference in value")-> 
+            plotlist[["fig2"]]
+        
+        
+        # Box plot of differences per scenario & variable
+        ggplot(comp_data, aes(variable, dif, fill = scenario)) +
+            geom_boxplot(alpha = 0.4) +
+            facet_wrap(~var_units, scales = "free") +
+            scale_fill_viridis_d() +
+            ggtitle("Differences between dev Hector and old-new testing data") +
+            labs(x = "Variable", y = "Difference in value", col = "Units") +
+            theme_bw() -> 
+            plotlist[["fig3"]]
+        
+    } else {
+        cat("Run leeyabot locally to generate diagnostic plots showing the differences.")
+    }
+}
 
 
-```{r}
-# Quick plot of the output 
-ggplot(comp_data) +
-    geom_line(aes(year, value, 
-                  linetype = "old-new data"), color = "grey", linewidth = 1)  + 
-    geom_line(aes(year, dev_value, linetype = "dev", 
-                  color = scenario), linewidth = 1)  +
-    facet_wrap(~var_units, scales = "free") + 
-    scale_linetype_manual(values = c("old-new data" = 1, "dev" = 2)) + 
-    scale_color_viridis_d() + 
-    labs(title = "Dev Hector vs. old-new results", y = NULL, x = NULL, linetype = "Hector Version") -> 
-    rslts1 ; rslts1
+if(!is.null(plotlist)){
+    for (p in plotlist) {
+        print(p)
+    }
+}
+
 ```
 
-```{r}
-# Plot the differences over time
-ggplot(comp_data, aes(year, dif, color = scenario)) +
-    geom_hline(yintercept = 0, alpha = 0.5) +
-    geom_line() +
-    facet_wrap(~var_units, scales = "free") +
-    scale_color_viridis_d() +
-    ggtitle("Differences between dev Hector and old-new testing data") +
-    labs(x = "Year", y = "Difference in value")-> 
-    diff_time1; diff_time1
-```
 
 
-```{r}
-# Box plot of differences per scenario & variable
-ggplot(comp_data, aes(variable, dif, fill = scenario)) +
-    geom_boxplot(alpha = 0.4) +
-    facet_wrap(~var_units, scales = "free") +
-    scale_fill_viridis_d() +
-    ggtitle("Differences between dev Hector and old-new testing data") +
-    labs(x = "Variable", y = "Difference in value", col = "Units") +
-    theme_bw() -> 
-    boxplot1; boxplot1
-```
-
-
-```{r}
+```{r clean up 1}
 # Clean up to avoid confusion 
-remove(dev_data, oldnew_data)
+remove(dev_data, oldnew_data, plotlist, SAME)
 ```
 
-# Release Version with Comparison
+# Release Version Comparison
 
-In the remainder of the document we compare this version of Hector, the **dev** version with the minted results from Hector `r release_vrsn` the most recent major release. There are two different sets of experiments to be considered here - idealized and multiforcing scenarios. The summary table will contain results from both types of experiments while the diagnostic plots will consider them separately. 
+In the remainder of the document we compare this version of Hector, the **dev** version with the minted results from Hector `r release_vrsn` the most recent major release. There are two different sets of experiments to be considered here - idealized and multiforcing scenarios. Each summary table will contain results from both types of experiments while the diagnostic plots will consider them separately. 
 
 
 ```{r}
@@ -340,145 +363,183 @@ dev_idealized_df %>%
     mutate(dif = dev_value - value) %>% 
     mutate(var_units = paste0(variable, " (", units, ")")) -> 
     comp_data
+
+# Save the idealized and multiforcing experiment results seperatly
+idealized_comp_data <- filter(comp_data, scenario %in% idealized_scns)
+multiforcing_comp_data <- filter(comp_data, !scenario %in% idealized_scns)
 ```
 
-```{r}
-
-tolerance <- 1e-7 
-SAME <- all(abs(comp_data$dif) <= tolerance)  
-
-if (SAME) {
-    msg <- paste0("The current pull request's outputs do not differ from the old-new version of Hector ", 
-                  oldnew_vrsn, ", ", oldnew_commit, sep = "")
-} else {
-    msg <- paste0("The current pull request's outputs differ from ", 
-        oldnew_vrsn, ", ", oldnew_commit, " as follows:", sep = "")  
-}
-cat(msg)
-
-
-
-```
-
+## Idealized Experiments
 
 ```{r}
 # Quantify the difference between Hector results per scenario and variable.  
-mf_summary_table <- get_summary_diff(comp_data)
+id_summary_table <- get_summary_diff(idealized_comp_data)
+
+kable(id_summary_table, digits = 3, 
+      format.args = list(scientific = TRUE), format = "html")
+```
+
+
+```{r}
+tolerance <- 1e-4 
+SAME <- all(abs(idealized_comp_data$dif) <= tolerance)  
+
+if(SAME) {
+    msg <- paste0("The current pull request's idealized outputs do not differ from the Hector release ", 
+                  release_vrsn, ", ", release_commit, sep = "")
+} else {
+    msg <- paste0("The current pull request's idealized outputs differ from ", 
+                  release_vrsn, ", ", release_commit, sep = "")  
+}
+cat(msg)
+```
+
+
+
+
+```{r release_idealized}
+plotlist <- NULL
+
+# If results look different 
+if(!SAME){
+    # Skip the plotting if running on github actions
+    if(tolower(platform) != "linux"){
+        
+        # Make a plot list
+        plotlist <- list()
+        
+        # Quick plot of the output 
+        ggplot(idealized_comp_data) +
+            geom_line(aes(year, value, 
+                          linetype = "release data", group = scenario), color = "grey", linewidth = 1)  + 
+            geom_line(aes(year, dev_value, linetype = "dev", 
+                          color = scenario), linewidth = 1)  +
+            facet_wrap(~var_units, scales = "free", ncol=1) + 
+            scale_linetype_manual(values = c("release data" = 1, "dev" = 2)) + 
+            scale_color_viridis_d() + 
+            labs(title = "Dev Hector vs. release results", y = NULL, x = NULL, linetype = "Hector Version") -> 
+            plotlist[["fig1"]]
+             
+        
+        # Plot the differences over time
+        ggplot(idealized_comp_data, aes(year, dif, color = scenario)) +
+            geom_hline(yintercept = 0, alpha = 0.5) +
+            geom_line() +
+            facet_wrap(~var_units, scales = "free", ncol=1) +
+            scale_color_viridis_d() +
+            ggtitle("Differences between dev Hector and release data") +
+            labs(x = "Year", y = "Difference in value")-> 
+            plotlist[["fig2"]]
+        
+        
+        # Box plot of differences per scenario & variable
+        ggplot(idealized_comp_data, aes(variable, dif, fill = scenario)) +
+            geom_boxplot(alpha = 0.4) +
+            facet_wrap(~var_units, scales = "free", ncol=1) +
+            scale_fill_viridis_d() +
+            ggtitle("Differences between dev Hector and release data") +
+            labs(x = "Variable", y = "Difference in value", col = "Units") +
+            theme_bw() -> 
+            plotlist[["fig3"]]
+        
+        
+    } else {
+        cat("Run leeyabot locally to generate diagnostic plots showing the differences.")
+    }
+}
+
+
+if(!is.null(plotlist)){
+    for (p in plotlist) {
+        print(p)
+    }
+}
+
+```
+
+
+
+## Multiforcing Experiments 
+
+```{r}
+# Quantify the difference between Hector results per scenario and variable.  
+mf_summary_table <- get_summary_diff(multiforcing_comp_data)
 
 kable(mf_summary_table, digits = 3, 
-             format.args = list(scientific = TRUE), format = "html")
+      format.args = list(scientific = TRUE), format = "html")
+```
+
+```{r}
+tolerance <- 1e-4 
+SAME <- all(abs(multiforcing_comp_data$dif) <= tolerance)  
+
+if(SAME) {
+    msg <- paste0("The current pull request's multiforcing outputs do not differ from the Hector release ", 
+                  release_vrsn, ", ", release_commit, sep = "")
+} else {
+    msg <- paste0("The current pull request's multiforcing outputs differ from ", 
+                  release_vrsn, ", ", release_commit, sep = "")  
+}
+cat(msg)
 ```
 
 
 
-## Idealized Experiments Diagnostic Plots
+```{r release_multiforcing}
+plotlist <- NULL
+
+# If results look different 
+if(!SAME){
+    # Skip the plotting if running on github actions
+    if(tolower(platform) != "linux"){
+        
+        # Make a plot list
+        plotlist <- list()
+        
+        # Quick plot of the output 
+        ggplot(multiforcing_comp_data) +
+            geom_line(aes(year, value, 
+                          linetype = "release data", group = scenario), color = "grey", linewidth = 1)  + 
+            geom_line(aes(year, dev_value, linetype = "dev", 
+                          color = scenario), linewidth = 1)  +
+            facet_wrap(~var_units, scales = "free", ncol=1) + 
+            scale_linetype_manual(values = c("release data" = 1, "dev" = 2)) + 
+            scale_color_viridis_d() + 
+            labs(title = "Dev Hector vs. release results", y = NULL, x = NULL, linetype = "Hector Version") -> 
+            plotlist[["fig1"]]
+             
+        
+        # Plot the differences over time
+        ggplot(multiforcing_comp_data, aes(year, dif, color = scenario)) +
+            geom_hline(yintercept = 0, alpha = 0.5) +
+            geom_line() +
+            facet_wrap(~var_units, scales = "free", ncol=1) +
+            scale_color_viridis_d() +
+            ggtitle("Differences between dev Hector and release data") +
+            labs(x = "Year", y = "Difference in value")-> 
+            plotlist[["fig2"]]
+        
+        
+        # Box plot of differences per scenario & variable
+        ggplot(multiforcing_comp_data, aes(variable, dif, fill = scenario)) +
+            geom_boxplot(alpha = 0.4) +
+            facet_wrap(~var_units, scales = "free", ncol=1) +
+            scale_fill_viridis_d() +
+            ggtitle("Differences between dev Hector and release data") +
+            labs(x = "Variable", y = "Difference in value", col = "Units") +
+            theme_bw() -> 
+            plotlist[["fig3"]]
+        
+        
+    } else {
+        cat("Run leeyabot locally to generate diagnostic plots showing the differences.")
+    }
+}
 
 
-```{r}
-comp_data %>% 
-    filter(scenario %in% idealized_scns) -> 
-    comp_data_ideal
-
-
-# Quick plot of the output 
-ggplot(comp_data_ideal) +
-    geom_line(aes(year, value, 
-                  linetype = "old-new data", group = scenario), color = "grey", linewidth = 1)  + 
-    geom_line(aes(year, dev_value, linetype = "dev", 
-                  color = scenario), linewidth = 1)  +
-    facet_wrap(~var_units, scales = "free", ncol=1) + 
-    scale_linetype_manual(values = c("old-new data" = 1, "dev" = 2)) + 
-    scale_color_viridis_d() + 
-    labs(title = "Dev Hector vs. old-new results", y = NULL, x = NULL, linetype = "Hector Version") -> 
-    rslts1 ; rslts1
-```
-
-```{r}
-# Plot the differences over time
-ggplot(comp_data, aes(year, dif, color = scenario)) +
-    geom_hline(yintercept = 0, alpha = 0.5) +
-    geom_line() +
-    facet_wrap(~var_units, scales = "free", ncol=1) +
-    scale_color_viridis_d() +
-    ggtitle("Differences between dev Hector and old-new testing data") +
-    labs(x = "Year", y = "Difference in value")-> 
-    diff_time1; diff_time1
-```
-
-
-```{r}
-# Box plot of differences per scenario & variable
-ggplot(comp_data, aes(variable, dif, fill = scenario)) +
-    geom_boxplot(alpha = 0.4) +
-    facet_wrap(~var_units, scales = "free", ncol=1) +
-    scale_fill_viridis_d() +
-    ggtitle("Differences between dev Hector and old-new testing data") +
-    labs(x = "Variable", y = "Difference in value", col = "Units") +
-    theme_bw() -> 
-    boxplot1; boxplot1
-```
-
-## Multiforcing Experiments Diagnostic Plots
-
-
-```{r}
-comp_data %>% 
-    filter(!scenario %in% idealized_scns) -> 
-    comp_data_mf
-
-# Quick plot of the output 
-ggplot(comp_data_mf) +
-    geom_line(aes(year, value, 
-                  linetype = "old-new data", group = scenario), color = "grey", linewidth = 1)  + 
-    geom_line(aes(year, dev_value, linetype = "dev", 
-                  color = scenario), linewidth = 1)  +
-    facet_wrap(~var_units, scales = "free", ncol=1) + 
-    scale_linetype_manual(values = c("old-new data" = 1, "dev" = 2)) + 
-    scale_color_viridis_d() + 
-    labs(title = "Dev Hector vs. old-new results", y = NULL, x = NULL, linetype = "Hector Version") -> 
-    rslts2 ; rslts2
-```
-
-```{r}
-# Plot the differences over time
-ggplot(comp_data_mf, aes(year, dif, color = scenario)) +
-    geom_hline(yintercept = 0, alpha = 0.5) +
-    geom_line() +
-    facet_wrap(~var_units, scales = "free", ncol =1) +
-    scale_color_viridis_d() +
-    ggtitle("Differences between dev Hector and old-new testing data") +
-    labs(x = "Year", y = "Difference in value")-> 
-    diff_time2; diff_time2
-```
-
-
-```{r}
-# Box plot of differences per scenario & variable
-ggplot(comp_data_mf, aes(variable, dif, fill = scenario)) +
-    geom_boxplot(alpha = 0.4) +
-    facet_wrap(~var_units, scales = "free", ncol = 1) +
-    scale_fill_viridis_d() +
-    ggtitle("Differences between dev Hector and old-new testing data") +
-    labs(x = "Variable", y = "Difference in value", col = "Units") +
-    theme_bw() -> 
-    boxplot2; boxplot2
-```
-
-
-```{r}
-# TODO need to figure out what is the best way to handle writing out the png files... if 
-# it makes sense to always write them out or it if only when in a certain mode... I 
-# guess it will depend on how we want to include the Leeyabot reporting on the PR
-# I could see a world where the TRUE part is determined by if not SAME or by 
-# a boolean at the beginning of the document that says SAVE
-if(PRINT_FIGS){
-    dir.create("figs", showWarnings = FALSE)
-    ggsave(filename = "./figs/02_rslts_idealized.png", plot = rslts1, height = 6, width = 9, create.dir = TRUE)
-    ggsave(filename = "./figs/02_diff_time_idealized.png", plot = diff_time1, height = 6, width = 9, create.dir = TRUE)
-    ggsave(filename = "./figs/02_boxplot_idealized.png", plot = boxplot1, height = 6, width = 9, create.dir = TRUE)
-    ggsave(filename = "./figs/02_rslts_mf.png", plot = rslts1, height = 6, width = 9, create.dir = TRUE)
-    ggsave(filename = "./figs/02_diff_time_mf.png", plot = diff_time1, height = 6, width = 9, create.dir = TRUE)
-    ggsave(filename = "./figs/02_boxplot_mf.png", plot = boxplot1, height = 6, width = 9, create.dir = TRUE)
+if(!is.null(plotlist)){
+    for (p in plotlist) {
+        print(p)
+    }
 }
 ```
-
